--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        </div>
        
        <div class="exchange-rate">Getting exchange rate</div>
-       <button>Get exchange Rate</button>
+       <button>Get Exchange Rate</button>
      </form>
     </div>
     <script src="js/country-list.js"></script> 
